# Design-and-Implementation-of-a-Multi-Model-AI-Agent-for-Automated-Health-Diagnostics

./: .env  .env.example  .gitignore  07-01-2026  work  15-1-26.txt  AI HEALTH MODEL.pptx  AI_Health_Diagnostics_Project_Presentation_Shivam.pptx  API_ENDPOINTS_SPEC.md  API_README.md  ARCHITECTURE_DIAGRAM.txt  BDCBC7196_Hematology_Dataset.json  COMPLETE_SERVER_FIX_GUIDE.md  COMPLETION_CHECKLIST.md  COMPLIANCE_ANALYSIS_REPORT.md  DASHBOARD_HISTORY_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Design-and-Implementation-of-a-MultiModel-AI-Agent-for-Automated-Health-Diagnostics (wecompress.com).pptx  Dockerfile  FINAL_INSTRUCTIONS.txt  Final Project Report.docx  Final_ppt.pptx  HOW_TO_OPEN.md  IDE  IDE.txt  IFCC_HINDUJA_STUDY_SUMMARY.md  ILPD_DATASET_ANALYSIS.md  IMPLEMENTATION_CHECKLIST.py  IMPLEMENTATION_SUMMARY.md  INDIAN_DATA_INTEGRATION_COMPLETE.md  INDIAN_POPULATION_DATA_SUMMARY.md  INSTALL_PYTHON_FIRST.bat  INSTANT_START.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE.py  JUST_DO_THIS_NOW.txt  LICENSE  LOGIN_INTEGRATION_STATUS.md  LOGIN_SYSTEM_DOCUMENTATION.md  MILESTONE1_COMPLETE.md  (+247 more)
MILESTONE 1/: REPOSITORY STRUCTURE  requirements.txt
_archive/: COMPLETE_LOGIN_SOCIAL_SUMMARY.md  DATABASE_INTEGRATION_GUIDE.md  DATABASE_RECOMMENDATION.md  DOCUMENTATION_INDEX.txt  FIX_SERVER_STEP_BY_STEP.txt  LOGIN_COMPLETE_SUMMARY.md  OPTIMIZATION_SUMMARY.md  QUICK_SETUP_LOGIN.md  QUICK_START.txt  QUICK_START_CHECKLIST.txt  README_LOGIN.md  RUN_SERVER_AUTO.bat  SOCIAL_LOGIN_GUIDE.md  SOCIAL_LOGIN_QUICK_START.md  START_HERE_READ_ME.txt  TEAM_SETUP_GUIDE.md  TODO.md  TODO_updated.md  VISUAL_WALKTHROUGH.txt  check_db.py  diagnose.bat  enable_enhanced_login.bat  (+37 more)
(+945 files in other folders)
