[tool.poetry]
name = "health-diagnostics-ai"
version = "0.1.0"
description = "Multi-Model AI Agent for Automated Health Diagnostics"
authors = ["NIMA FATHIMA"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
PyMuPDF = "^1.23.8"
pdfplumber = "^0.10.3"
easyocr = "^1.7.1"
opencv-python = "^4.8.1"
Pillow = "^10.1.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
openai = "^1.6.1"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
aiofiles = "^23.2.1"
celery = "^5.3.4"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
